--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
+  "engines": {
+    "node": "6.2.2"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.6.4",
+    "angular-route": "^1.6.4",
     "express": "^4.15.2",
+    "handlebars": "^4.0.6",
+    "hbs": "^4.0.1",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.1",
     "nodemon": "^1.11.0"
