--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node server/app.js"
   },
   "engines": {
     "node": "6.2.2"
@@ -15,6 +15,7 @@
   "dependencies": {
     "angular": "^1.6.4",
     "angular-route": "^1.6.4",
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "handlebars": "^4.0.6",
     "hbs": "^4.0.1",
